# 42sh

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README  TODO  ast.dot  script.py
doc/: 42sh.1  Doxyfile  report-page.html  style.css
src/: main.c
src/arith_lexer/: arith_lexer.c  arlex_match_operator.c  arlex_match_value.c  arlex_tokening.c
src/ast/: ast_free_commands.c  ast_free_controls.c  ast_free_elements.c  ast_free_lists.c  ast_free_loops.c  ast_free_utils.c  ast_init_commands.c  ast_init_controls.c  ast_init_elements.c  ast_init_lists.c  ast_init_loops.c  ast_init_utils.c  ast_print_commands.c  ast_print_controls.c  ast_print_lists.c  ast_print_loops.c  ast_print_utils.c
src/builtins/: alias.c  cd.c  echo.c  exit.c  shopt.c  source.c
src/exec/: echo.c  exec_ast.c  exec_commands.c  exec_controls.c  exec_lists.c  exec_loops.c  exec_utils.c  execute.c  exit.c
src/execute/: execute.c
src/expansion/: arithmetic_execution.c  arithmetic_free_nodes.c  arithmetic_init_nodes.c  arithmetic_nums.c  arithmetic_parsing.c  arithmetic_parsing_high_priority.c  arithmetic_parsing_low_priority.c  arithmetic_shunting_yard.c  arithmetic_stack.c  arithmetic_utils.c  path_expansion.c  variables_expansion.c
src/includes/: argument_parser.h  arith_lexer.h  ast.h  builtins.h  echo.h  exec_ast.h  execute.h  exit.h  expansion.h  global.h  hashtable.h  lexer.h  parser.h  util.h  variables.h
src/lexer/: lexer.c  lexer.h  lexer_match_operator.c  lexer_match_symbol.c  lexer_match_variable.c  lexer_processing.c  lexer_quoting.c  lexer_reader.c  lexer_tokening.c  lexer_utils.c
src/parser/: ast.c  nodes_destroy.c  nodes_initialisation.c  parser.c  parser_commands.c  parser_controls.c  parser_elements.c  parser_lists.c  parser_loops.c  parser_utils.c
src/utils/: argument_parser.c  hashtable.c  ht_bulk_operations.c  ht_element.c  ht_operations.c  utils.c  utils_int.c  utils_str.c
src/variables/: variables.c
tests/: fun.py  my_test_runner.py  requirements.txt  test.py  test_functions.py
tests/arith_lexer/: test_lexer_configuration.py  test_operators_easy.py  utils.py
tests/binary/: e.sh  test.c  test_binary.py  test_binary_builtins.py  test_binary_cd.py  test_binary_echo.py  test_binary_exit.py  test_binary_lexer.py  test_commands.py  test_scripts.py
tests/execute/: test_arithmetic_expansion.py  test_exec.py
tests/lexer/: test_commands_easy.py  test_commands_medium.py  test_comment_easy.py  test_comment_medium.py  test_lexer.py  test_lexer_configuration.py  test_lexer_reading.py  test_quoting.py  test_quoting_easy.py  test_variables_easy.py  test_variables_medium.py  test_words_easy.py  test_words_medium.py  utils.py
tests/parser/: test_and_or.py  (+19 more)
(+24 files in other folders)
